complete ground object specs
